# MD-libs

./: README.md
MDEncode/decls/: MDEncode.decls
MDEncode/example/: example.bb
MDEncode/src/: CMakeLists.txt  MDEncode.cpp  MDEncode.h  MDEncode.sln  MDEncode.vcxproj  MDEncode.vcxproj.filters
MDReaderWriter/decls/: MDReaderWriter.decls
MDReaderWriter/example/: example.bb  example2.bb
MDReaderWriter/src/: CMakeLists.txt  main.cpp  main.h
MDReaderWriter/src/jsoncpp/lib/: jsoncpp_static.lib
MDTexture/example/: example.bb
MDTexture/src/: CMakeLists.txt  main.cpp  main.h
